<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chatter</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="empty_list">No Messages</string>
    <string name="empty_friends_list">Add friends to begin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="login_string">Log In</string>
    <string name="signup_string">Sign Up!!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_string">Email</string>
    <string name="error_string">Please fill all the fields properly</string>
    <string name="login_error_string">Please fill all the fields properly</string>
    <string name="login_title_error_string">Error</string>
    <string name="logout_string">Logout</string>
    <string name="edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>

</resources>